@@ -5,4 +5,3 @@ $ ./Oo test.oo
 passed: 1
 passed: 3
 passed: 5
-passed: 6
