@@ -1,0 +1,14 @@
+# test_cal.oo
+#                           wookay.noh at gmail.com
+
+규칙은 rules/cal.rb
+오늘은 뭐?
+오늘은 몇월?
+오늘은 몇일?
+오늘은 몇월 몇일?
+오늘은 무슨 요일?
+
+지금 시각은 뭐?
+지금 시각은 몇시?
+지금 시각은 몇시 몇분?
+지금 시각은 몇시 몇분 몇초?
