@@ -1,3 +1,6 @@
+2008-12-04  wookay.noh at gmail.com
+	* 키순서
+
 2008-12-03  wookay.noh at gmail.com
 	* 인자값
 	* 역함수
